--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["szagi3891 <szeligagrzegorz@gmail.com>"]
 hyper = "0.9"
 getopts = "0.2"
 rustc-serialize = "0.3.19"
+rust-crypto = "0.2.36"
