--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -7,4 +7,11 @@ authors = ["szagi3891 <szeligagrzegorz@gmail.com>"]
 hyper = "0.9"
 getopts = "0.2"
 rustc-serialize = "0.3.19"
+
+#serde = "0.8.17"
+#serde = "^0.8"
+#serde_derive = "^0.8"
+#serde_json = "^0.8"
+#rust-crypto = "0.2.36"
+
 rust-crypto = "0.2.36"
